Correct typos in the CHANGES entries for 1.0.0
git-svn-id: http://svn.xiph.org/trunk/ao@17134 0101bb08-14d6-0310-b084-bc0e0c8e3800

--- a/CHANGES
+++ b/CHANGES
@@ -4,7 +4,7 @@
  - Update and test all drivers on modern installs
  - New config file options
  - Driver options may be specifid in config file
- - Support for MacosX < 1.5 dropped, driver moded to AUHAL
+ - Support for MacosX < 10.5 dropped, driver modded to AUHAL
  - Build in WMM driver rather than using dlopen()
  - Added Roar Audio driver
  - Added OpenBSD SNDIO driver
