Added missing ao_file_extension() (close #1841)
git-svn-id: http://svn.xiph.org/trunk/ao@18200 0101bb08-14d6-0310-b084-bc0e0c8e3800

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+1.1.1 - Not yet released
+ - Added missing ao_file_extension() (Closes: #1841)
+
 1.1.0 - February 21, 2011
  - Add autofoo ld symbol versioning to build system
  - Update Roar driver to latest API
