Corrected changelog format, thanks to rillian
git-svn-id: http://svn.xiph.org/trunk/ao@18201 0101bb08-14d6-0310-b084-bc0e0c8e3800

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,5 @@
 1.1.1 - Not yet released
- - Added missing ao_file_extension() (Closes: #1841)
+ - Added missing ao_file_extension() (see Track #1841)
 
 1.1.0 - February 21, 2011
  - Add autofoo ld symbol versioning to build system
