--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 1.1.1 - Not yet released
  - Added missing ao_file_extension() (see Track #1841)
+ - Fixed memory leak in ao_shutdown() (see Track #1799)
 
 1.1.0 - February 21, 2011
  - Add autofoo ld symbol versioning to build system
