--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@
  - Added missing ao_file_extension() (see Trac #1841)
  - Fixed memory leak in ao_shutdown() (see Trac #1799)
  - Updated manpage libao.conf.5 (see Trac #1822)
+ - Corrected doc/ao_play.html (see Trac #1808)
 
 1.1.0 - February 21, 2011
  - Add autofoo ld symbol versioning to build system
